--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "immutability-helper": "^3.1.1",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-image-picker": "^4.8.4",
     "react-native-safe-area-context": "^4.0.1",
     "react-native-screens": "^3.12.0",
     "react-native-snap-carousel": "^3.9.1",
